# competitive-analysis-agent

./: .env.example  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml  setup.sh  verify.sh
.devcontainer/: Dockerfile  devcontainer.json
competitive_intel/: __init__.py  __main__.py  callbacks.py  config.py  graph.py  main.py  state.py
competitive_intel/nodes/: __init__.py  critic.py  deliver.py  research.py  writer.py
competitive_intel/tools/: __init__.py  news.py  perplexity_search.py  scraper.py  web_search.py
tests/: conftest.py  test_graph.py  test_nodes.py
